--- a/pom.xml
+++ b/pom.xml
@@ -91,13 +91,15 @@
 						</goals>
 						<phase>package</phase>
 						<configuration>
+							<shadedArtifactAttached>true</shadedArtifactAttached>
+							<shadedClassifierName>jar-with-dependencies</shadedClassifierName>
 							<transformers>
 								<transformer
 								implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
 									<mainClass>${mainClass}</mainClass>
 								</transformer>
 							</transformers>
-							<createDependencyReducedPom>false</createDependencyReducedPom>
+							<createDependencyReducedPom>true</createDependencyReducedPom>
 							<minimizeJar>true</minimizeJar>
 						</configuration>
 					</execution>
